--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^11.2.0",
     "lodash": "^4.17.21",
     "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.2",
     "roboto-fontface": "*",
     "vue": "^3.5.12",
     "vue-i18n": "^10.0.4",
